# codex-review-packet

./: .gitignore  AGENTS.md  DECISIONS.md  Makefile  README.md  codex_review_packet.py  pyproject.toml
.github/workflows/: ci.yml
examples/: readiness-report.json
tests/: test_codex_review_packet.py
